--- a/templates/info.html
+++ b/templates/info.html
@@ -10,9 +10,9 @@
   <body>
     <h1>Your Preferences:</h1>
     <div class = message>
-      Stock=msft<br><br>
-      Threshold = 260<br><br>
-      Current Price = 285.76<br><br>
+      Stock={{stock_ticker}}<br><br>
+      Threshold ={{Threshold}}<br><br>
+      Current Price ={{Current_price}}<br><br>
       You will notified per your frequecny.<br><br>
       <div class="back-btn">
         <a href="index.html" >Back To Home</a>
